[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "authorizenet>=1.1.5",
    "braintree>=4.34.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-telegram-bot[job-queue]==13.15",
    "requests>=2.32.3",
    "shopifyapi>=12.7.0",
    "stripe>=11.6.0",
    "telegram>=0.0.1",
    "worldpay>=0.2",
]
